@@ -133,7 +133,8 @@ class TestStdlibRemovals(unittest.TestCase):
                         'ihooks', 'mhlib')
     inclusive_platforms = {'irix' : ('pure', 'AL', 'al', 'CD', 'cd', 'cddb',
                                      'cdplayer', 'CL', 'cl', 'DEVICE', 'GL',
-                                     'gl', 'ERRNO', 'FILE', 'FL', 'flp', 'fl'),
+                                     'gl', 'ERRNO', 'FILE', 'FL', 'flp', 'fl',
+                                     'fm'),
                           'darwin' : ('autoGIL', 'Carbon', 'OSATerminology',
                                       'icglue', 'Nav', 'MacOS', 'aepack',
                                       'aetools', 'aetypes', 'applesingle',
